<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cherry</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 管理页面的相关String 内容-->
    <string name="manager_cache">缓存清理</string>
    <string name="manager_update">更新</string>
    <string name="manager_share">分享</string>
    <string name="manager_feedback">反馈</string>
    <string name="more_manager_feedback">问题反馈</string>
    <string name="manager_download">下载管理</string>
    <string name="manager_game_update">游戏更新</string>
    <string name="manager_check_update">检查更新</string>
    <string name="manager_about">关于</string>
    <string name="manager_personal">个人</string>
    <string name="download_state_setting">设置</string>
    <string name="setting_others">其它</string>
</resources>
